--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -31,6 +31,7 @@
     "angular-ng-autocomplete": "^2.0.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.0",
+    "bootstrap4-toggle": "^3.6.1",
     "core-js": "^3.3.3",
     "jquery": "^3.4.1",
     "oidc-client": "^1.9.1",
