--- a/AFBA.EPP.csproj
+++ b/AFBA.EPP.csproj
@@ -40,6 +40,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\app\services\model\" />
+    <Folder Include="App_Data\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
