--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -33,10 +33,12 @@
     "bootstrap": "^4.5.0",
     "bootstrap4-toggle": "^3.6.1",
     "core-js": "^3.3.3",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
+    "xlsx": "^0.16.2",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
