--- a/AFBA.EPP.csproj
+++ b/AFBA.EPP.csproj
@@ -34,16 +34,42 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="ClientApp\dist\**" />
     <Compile Remove="ClientApp\src\app\shared\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="ClientApp\dist\**" />
     <Content Remove="ClientApp\src\app\shared\**" />
+    <EmbeddedResource Remove="ClientApp\dist\**" />
     <EmbeddedResource Remove="ClientApp\src\app\shared\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="ClientApp\dist\**" />
     <None Remove="ClientApp\src\app\shared\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\dist\assets\img\5star-logo.png" />
+    <None Remove="ClientApp\dist\assets\img\drag-drop.PNG" />
+    <None Remove="ClientApp\dist\assets\posteppbody\eppbody.json" />
+    <None Remove="ClientApp\dist\index.html" />
+    <None Remove="ClientApp\dist\main-es2015.js" />
+    <None Remove="ClientApp\dist\main-es2015.js.map" />
+    <None Remove="ClientApp\dist\main-es5.js" />
+    <None Remove="ClientApp\dist\main-es5.js.map" />
+    <None Remove="ClientApp\dist\polyfills-es2015.js" />
+    <None Remove="ClientApp\dist\polyfills-es2015.js.map" />
+    <None Remove="ClientApp\dist\polyfills-es5.js" />
+    <None Remove="ClientApp\dist\polyfills-es5.js.map" />
+    <None Remove="ClientApp\dist\runtime-es2015.js" />
+    <None Remove="ClientApp\dist\runtime-es2015.js.map" />
+    <None Remove="ClientApp\dist\runtime-es5.js" />
+    <None Remove="ClientApp\dist\runtime-es5.js.map" />
+    <None Remove="ClientApp\dist\styles.css" />
+    <None Remove="ClientApp\dist\styles.css.map" />
+    <None Remove="ClientApp\dist\vendor-es2015.js" />
+    <None Remove="ClientApp\dist\vendor-es2015.js.map" />
+    <None Remove="ClientApp\dist\vendor-es5.js" />
+    <None Remove="ClientApp\dist\vendor-es5.js.map" />
     <None Remove="ClientApp\src\app\shared\components\loading-indicator\loader-interceptors.spec.ts" />
     <None Remove="ClientApp\src\app\shared\components\loading-indicator\loader-interceptors.ts" />
     <None Remove="ClientApp\src\app\shared\components\loading-indicator\loader.service.spec.ts" />
