--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.12",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "8.2.3",
     "@angular/common": "8.2.12",
     "@angular/compiler": "8.2.12",
@@ -35,6 +35,7 @@
     "core-js": "^3.3.3",
     "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
+    "ngx-toastr": "^12.1.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
